--- a/Source Files - Section 006 - The Quiz Application Project/Source - Lecture 003 - Get Ready/index.html
+++ b/Source Files - Section 006 - The Quiz Application Project/Source - Lecture 003 - Get Ready/index.html
@@ -140,5 +140,5 @@
  ***********END FINAL RESULT PAGE*********
  **************************************-->
   </body>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </html>
